# Inorta-cms

./: PROJECT_STATUS.md  README.md  SCRIPTS.md  SUMMARY.md  application-instruction.md  setup.sh
.github/: copilot-instructions.md
apps/backend/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  alembic.ini  pyproject.toml  setup.sh
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_add_cms_models.py  0002_add_settings_menus.py
apps/backend/src/inorta_backend/: __init__.py  main.py
apps/backend/src/inorta_backend/api/: __init__.py  routes.py
apps/backend/src/inorta_backend/core/: config.py
apps/backend/src/inorta_backend/db/: session.py
apps/backend/src/inorta_backend/models/: category.py  content.py  content_category.py  content_tag.py  media.py  menu.py  menu_item.py  role.py  settings.py  tag.py  user.py
apps/backend/src/inorta_backend/schemas/: category.py  content.py  media.py  menu.py  role.py  setting.py  tag.py  user.py
apps/backend/src/inorta_backend/services/: category_service.py  content_service.py  media_service.py  menu_service.py  role_service.py  setting_service.py  tag_service.py  user_service.py
apps/backend/src/inorta_backend/tests/: test_api.py  test_category_tag_media.py  test_content.py  test_menus.py  test_roles.py  test_settings.py
apps/cms-react/: .eslintrc.cjs  .gitignore  COMPONENT_GUIDE.md  IMPLEMENTATION.md  README.md  THEME_GUIDE.md  index.html  package.json  setup.sh  tailwind.config.js  tsconfig.json
apps/cms-react/src/: App.jsx  App.tsx  index.css  main.tsx
(+54 files in other folders)
